# c_lib_memory

./: CMakeLists.txt
core/: CMakeLists.txt  yaya_memory.c  yaya_memory.h  yaya_memory_stats.c  yaya_memory_stats.h  yaya_memory_wrapper.h
lib/: CMakeLists.txt  yaya_mem.h  yaya_memory.c  yaya_memory.h  yaya_memory_stats.h
test/: CMakeLists.txt  main.c  test_memory.c  test_memory_stats_global.c  test_memory_stats_local.c
using/: CMakeLists.txt  main.c  using_base.c  using_correct.c  using_wrong.c
